--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,8 @@
     "react/jsx-filename-extension": [1, {"extensions": [".ts", ".tsx"]}],
     "@typescript-eslint/no-explicit-any": "warn",
     "arrow-body-style": ["off"],
-    "react/function-component-definition" : ["off"]
+    "react/function-component-definition" : ["off"],
+    "react/prop-types": "off"
   }
 
 }
