--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,11 +24,13 @@
   },
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".ts", ".tsx"] }],
+    "react/jsx-filename-extension": [1, {"extensions": [".ts", ".tsx"]}],
     "@typescript-eslint/no-explicit-any": "warn",
     "arrow-body-style": ["off"],
     "react/function-component-definition": ["off"],
     "react/prop-types": "off",
-    "no-param-reassign": "off"
+    "no-param-reassign": "off",
+    "@typescript-eslint/no-unused-vars": "warn",
+    "no-underscore-dangle": ["off"]
   }
 }
