--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,6 @@
     "react/prop-types": "off",
     "no-param-reassign": "off",
     "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": "off"
+    "@typescript-eslint/no-unused-vars": "warn"
   }
 }
