--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,6 @@
     "react/function-component-definition": ["off"],
     "react/prop-types": "off",
     "no-param-reassign": "off",
-    "no-unused-vars": "warn",
+    "no-unused-vars": "warn"
   }
 }
