--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-transition-group": "^4.4.5",
     "dayjs": "^1.11.7",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "framer-motion": "^9.0.4",
     "i18next": "^22.4.10",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.1",
